# reesi-bi-hub

./: .gitignore  .prettierignore  AGENTS.md  PLAN.md  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/adapters/: __init__.py  bubble_adapter.py  data_source.py
apps/api/app/schema/: __init__.py  metrics.py
apps/api/scripts/: README.md  geocode_csv.py
apps/api/tests/: test_data_source_protocol.py  test_health.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/heatmap/: page.tsx
apps/web/src/components/charts/: HeatmapGermany.tsx
apps/web/src/lib/heatmap/: index.ts  projection.ts  render.ts  sample-data.ts  themes.ts  types.ts
apps/web/src/styles/: brand.css
supabase/: README.md  config.toml
supabase/migrations/: 20260415000000_init_reports_schema.sql
